--- a/index.html
+++ b/index.html
@@ -273,9 +273,18 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+           <div class="resume-item">
+              <h4>Program Manager / Incubation Manager </h4>
+              <h5>2023 July - Present</h5>
+              <p><em>Bytedance </em></p>
+              <p>Incubation Manager for Bytedance Emerging Product (e.g. TikTok Music), program-manage the product new feature launches by collaborating with business teams in China as well as cross-functional leaders across Trust & Safety, Legal & R&D etc.  </p>
+              <ul>
+                <li>Leading a program to join force moderations with different products over to central platform. Defined the program goal and priorities and led a working group of PMs to deliver two milestone outcomes on time. </li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Senior Program Manager</h4>
-              <h5>2020 - Present</h5>
+              <h5>2020 - 2023</h5>
               <p><em>Google Ads </em></p>
               <p>Central Program Manager for Google Ads Product Request Prioritization Process and Business strategy planning, Global lead for Transparency and Policy launches programs with an objective to improve Ads products, ensure launch experiences for customers, and minimize legal risks to Google. </p>
               <ul>
