--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
            <!--  <h3>Program Manager</h3> -->
             <p class="fst-italic">
-              I am a highly experienced operations and strategy leader with a proven track record of success in a variety of industries. I have over 14 years of experience in program management, product management, and customer experience, and I have a deep understanding of the challenges and opportunities facing businesses today. I'm a stand up comedian, active in both English and Chinese stand up clubs.
+              I am a highly experienced operations and strategy leader with a proven track record of success in a variety of industries. I have over 14 years of experience in program management,  management, and customer experience, and I have a deep understanding of the challenges and opportunities facing businesses today. I'm a stand up comedian, active in both English and Chinese stand up clubs.
             </p>
 
             <div class="row">
@@ -124,7 +124,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
- <!--          <p>I have been leading a project team and providing scaled solution for over 6 million advertisers, I designed and deployed Product Launch Readiness strategies and Request Prioritisation Process that empowered smooth product experience and process automation:</p> -->
+ <!--          <p>I have been leading a project team and providing scaled solution for over 6 million advertisers, I designed and deployed  Launch Readiness strategies and Request Prioritisation Process that empowered smooth  experience and process automation:</p> -->
         </div>
 
         <div class="row">
@@ -141,7 +141,7 @@
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Successful Product Launches</p>
+              <p>Successful Feature Launches</p>
             </div>
           </div>
 
